# lifeCore

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  LifeCore.cpp  LifeCore.h
test/: CMakeLists.txt  lifeCore_test.cpp
